v4/data-types.md
---
layout: sidebar
sidebar: s1
title: "Data Types"
version: "v4"
---
<div class="specPage overview">
   <h3>Data Types</h3>
   <div class="letterSelection">
      <ul class="pagination">
         <li class="page-item"><a href="#letterFacet_a">a</a></li>
         <li class="page-item"><a href="#letterFacet_b">b</a></li>
         <li class="page-item"><a href="#letterFacet_c">c</a></li>
         <li class="page-item"><a href="#letterFacet_d">d</a></li>
         <li class="page-item"><a href="#letterFacet_e">e</a></li>
         <li class="page-item"><a href="#letterFacet_f">f</a></li>
         <li class="page-item"><a href="#letterFacet_g">g</a></li>
         <li class="page-item"><a href="#letterFacet_h">h</a></li>
         <li class="page-item"><a href="#letterFacet_i">i</a></li>
         <li class="page-item"><a href="#letterFacet_k">k</a></li>
         <li class="page-item"><a href="#letterFacet_l">l</a></li>
         <li class="page-item"><a href="#letterFacet_m">m</a></li>
         <li class="page-item"><a href="#letterFacet_n">n</a></li>
         <li class="page-item"><a href="#letterFacet_o">o</a></li>
         <li class="page-item"><a href="#letterFacet_p">p</a></li>
         <li class="page-item"><a href="#letterFacet_r">r</a></li>
         <li class="page-item"><a href="#letterFacet_s">s</a></li>
         <li class="page-item"><a href="#letterFacet_t">t</a></li>
         <li class="page-item"><a href="#letterFacet_u">u</a></li>
         <li class="page-item"><a href="#letterFacet_v">v</a></li>
         <li class="page-item"><a href="#letterFacet_w">w</a></li>
      </ul>
   </div>
   <div class="facet letter overview" id="letterFacet_a">
      <div class="label">a</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="a" data-ident="data.ACCIDENTAL.GESTURAL" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.accidental.gestural.html">data.ACCIDENTAL.GESTURAL</a><a class="overviewLink datatype" data-initial="a" data-ident="data.ACCIDENTAL.WRITTEN" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.accidental.written.html">data.ACCIDENTAL.WRITTEN</a><a class="overviewLink datatype" data-initial="a" data-ident="data.ARTICULATION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.articulation.html">data.ARTICULATION</a><a class="overviewLink datatype" data-initial="a" data-ident="data.AUGMENTDOT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.augmentdot.html">data.AUGMENTDOT</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_b">
      <div class="label">b</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="b" data-ident="data.BARMETHOD" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.barmethod.html">data.BARMETHOD</a><a class="overviewLink datatype" data-initial="b" data-ident="data.BARRENDITION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.barrendition.html">data.BARRENDITION</a><a class="overviewLink datatype" data-initial="b" data-ident="data.BEAM" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.beam.html">data.BEAM</a><a class="overviewLink datatype" data-initial="b" data-ident="data.BEAMPLACE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.beamplace.html">data.BEAMPLACE</a><a class="overviewLink datatype" data-initial="b" data-ident="data.BEAT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.beat.html">data.BEAT</a><a class="overviewLink datatype" data-initial="b" data-ident="data.BEATRPT.REND" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.beatrpt.rend.html">data.BEATRPT.REND</a><a class="overviewLink datatype" data-initial="b" data-ident="data.BEND.AMOUNT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.bend.amount.html">data.BEND.AMOUNT</a><a class="overviewLink datatype" data-initial="b" data-ident="data.BETYPE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.betype.html">data.BETYPE</a><a class="overviewLink datatype" data-initial="b" data-ident="data.BOOLEAN" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.boolean.html">data.BOOLEAN</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_c">
      <div class="label">c</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="c" data-ident="data.CERTAINTY" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.certainty.html">data.CERTAINTY</a><a class="overviewLink datatype" data-initial="c" data-ident="data.CLEFLINE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.clefline.html">data.CLEFLINE</a><a class="overviewLink datatype" data-initial="c" data-ident="data.CLEFSHAPE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.clefshape.html">data.CLEFSHAPE</a><a class="overviewLink datatype" data-initial="c" data-ident="data.CLUSTER" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.cluster.html">data.CLUSTER</a><a class="overviewLink datatype" data-initial="c" data-ident="data.COLOR" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.color.html">data.COLOR</a><a class="overviewLink datatype" data-initial="c" data-ident="data.COLORNAMES" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.colornames.html">data.COLORNAMES</a><a class="overviewLink datatype" data-initial="c" data-ident="data.COLORVALUES" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.colorvalues.html">data.COLORVALUES</a><a class="overviewLink datatype" data-initial="c" data-ident="data.COMPASSDIRECTION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.compassdirection.html">data.COMPASSDIRECTION</a><a class="overviewLink datatype" data-initial="c" data-ident="data.COMPASSDIRECTION.basic" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.compassdirection.basic.html">data.COMPASSDIRECTION.basic</a><a class="overviewLink datatype" data-initial="c" data-ident="data.COMPASSDIRECTION.extended" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.compassdirection.extended.html">data.COMPASSDIRECTION.extended</a><a class="overviewLink datatype" data-initial="c" data-ident="data.CONFIDENCE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.confidence.html">data.CONFIDENCE</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_d">
      <div class="label">d</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="d" data-ident="data.DEGREES" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.degrees.html">data.DEGREES</a><a class="overviewLink datatype" data-initial="d" data-ident="data.DURATION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.duration.html">data.DURATION</a><a class="overviewLink datatype" data-initial="d" data-ident="data.DURATION.cmn" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.duration.cmn.html">data.DURATION.cmn</a><a class="overviewLink datatype" data-initial="d" data-ident="data.DURATION.gestural" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.duration.gestural.html">data.DURATION.gestural</a><a class="overviewLink datatype" data-initial="d" data-ident="data.DURATION.mensural" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.duration.mensural.html">data.DURATION.mensural</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_e">
      <div class="label">e</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="e" data-ident="data.ENCLOSURE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.enclosure.html">data.ENCLOSURE</a><a class="overviewLink datatype" data-initial="e" data-ident="data.EVENTREL" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.eventrel.html">data.EVENTREL</a><a class="overviewLink datatype" data-initial="e" data-ident="data.EVENTREL.basic" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.eventrel.basic.html">data.EVENTREL.basic</a><a class="overviewLink datatype" data-initial="e" data-ident="data.EVENTREL.extended" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.eventrel.extended.html">data.EVENTREL.extended</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_f">
      <div class="label">f</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="f" data-ident="data.FILL" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fill.html">data.FILL</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FINGER.FRET" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.finger.fret.html">data.FINGER.FRET</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FONTFAMILY" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fontfamily.html">data.FONTFAMILY</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FONTNAME" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fontname.html">data.FONTNAME</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FONTSIZE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fontsize.html">data.FONTSIZE</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FONTSIZENUMERIC" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fontsizenumeric.html">data.FONTSIZENUMERIC</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FONTSIZESCALE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fontsizescale.html">data.FONTSIZESCALE</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FONTSIZETERM" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fontsizeterm.html">data.FONTSIZETERM</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FONTSTYLE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fontstyle.html">data.FONTSTYLE</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FONTWEIGHT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fontweight.html">data.FONTWEIGHT</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FRBRRELATIONSHIP" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.frbrrelationship.html">data.FRBRRELATIONSHIP</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FRETNUMBER" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fretnumber.html">data.FRETNUMBER</a><a class="overviewLink datatype" data-initial="f" data-ident="data.FRETNUMBER.limited" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.fretnumber.limited.html">data.FRETNUMBER.limited</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_g">
      <div class="label">g</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="g" data-ident="data.GLISSANDO" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.glissando.html">data.GLISSANDO</a><a class="overviewLink datatype" data-initial="g" data-ident="data.GRACE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.grace.html">data.GRACE</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_h">
      <div class="label">h</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="h" data-ident="data.HEADSHAPE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.headshape.html">data.HEADSHAPE</a><a class="overviewLink datatype" data-initial="h" data-ident="data.HEADSHAPE.list" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.headshape.list.html">data.HEADSHAPE.list</a><a class="overviewLink datatype" data-initial="h" data-ident="data.HEXNUM" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.hexnum.html">data.HEXNUM</a><a class="overviewLink datatype" data-initial="h" data-ident="data.HORIZONTALALIGNMENT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.horizontalalignment.html">data.HORIZONTALALIGNMENT</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_i">
      <div class="label">i</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="i" data-ident="data.IDREF" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.idref.html">data.IDREF</a><a class="overviewLink datatype" data-initial="i" data-ident="data.INEUMEFORM" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.ineumeform.html">data.INEUMEFORM</a><a class="overviewLink datatype" data-initial="i" data-ident="data.INEUMENAME" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.ineumename.html">data.INEUMENAME</a><a class="overviewLink datatype" data-initial="i" data-ident="data.INTERVAL.HARMONIC" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.interval.harmonic.html">data.INTERVAL.HARMONIC</a><a class="overviewLink datatype" data-initial="i" data-ident="data.INTERVAL.MELODIC" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.interval.melodic.html">data.INTERVAL.MELODIC</a><a class="overviewLink datatype" data-initial="i" data-ident="data.ISODATE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.isodate.html">data.ISODATE</a><a class="overviewLink datatype" data-initial="i" data-ident="data.ISOTIME" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.isotime.html">data.ISOTIME</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_k">
      <div class="label">k</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="k" data-ident="data.KEYFIFTHS" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.keyfifths.html">data.KEYFIFTHS</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_l">
      <div class="label">l</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="l" data-ident="data.LAYERSCHEME" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.layerscheme.html">data.LAYERSCHEME</a><a class="overviewLink datatype" data-initial="l" data-ident="data.LIGATUREFORM" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.ligatureform.html">data.LIGATUREFORM</a><a class="overviewLink datatype" data-initial="l" data-ident="data.LINEFORM" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.lineform.html">data.LINEFORM</a><a class="overviewLink datatype" data-initial="l" data-ident="data.LINESTARTENDSYMBOL" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.linestartendsymbol.html">data.LINESTARTENDSYMBOL</a><a class="overviewLink datatype" data-initial="l" data-ident="data.LINEWIDTH" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.linewidth.html">data.LINEWIDTH</a><a class="overviewLink datatype" data-initial="l" data-ident="data.LINEWIDTHTERM" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.linewidthterm.html">data.LINEWIDTHTERM</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_m">
      <div class="label">m</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="m" data-ident="data.MEASUREBEAT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.measurebeat.html">data.MEASUREBEAT</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MEASUREBEATOFFSET" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.measurebeatoffset.html">data.MEASUREBEATOFFSET</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MEASUREMENTABS" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.measurementabs.html">data.MEASUREMENTABS</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MEASUREMENTREL" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.measurementrel.html">data.MEASUREMENTREL</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MELODICFUNCTION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.melodicfunction.html">data.MELODICFUNCTION</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MENSURATIONSIGN" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.mensurationsign.html">data.MENSURATIONSIGN</a><a class="overviewLink datatype" data-initial="m" data-ident="data.METERSIGN" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.metersign.html">data.METERSIGN</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MIDIBPM" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.midibpm.html">data.MIDIBPM</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MIDICHANNEL" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.midichannel.html">data.MIDICHANNEL</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MIDIMSPB" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.midimspb.html">data.MIDIMSPB</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MIDINAMES" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.midinames.html">data.MIDINAMES</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MIDIVALUE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.midivalue.html">data.MIDIVALUE</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MIDIVALUE_NAME" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.midivalue_name.html">data.MIDIVALUE_NAME</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MIDIVALUE_PAN" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.midivalue_pan.html">data.MIDIVALUE_PAN</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MODE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.mode.html">data.MODE</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MODSRELATIONSHIP" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.modsrelationship.html">data.MODSRELATIONSHIP</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MODUSMAIOR" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.modusmaior.html">data.MODUSMAIOR</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MODUSMINOR" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.modusminor.html">data.MODUSMINOR</a><a class="overviewLink datatype" data-initial="m" data-ident="data.MUSICFONT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.musicfont.html">data.MUSICFONT</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_n">
      <div class="label">n</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="n" data-ident="data.NCNAME" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.ncname.html">data.NCNAME</a><a class="overviewLink datatype" data-initial="n" data-ident="data.NMTOKEN" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.nmtoken.html">data.NMTOKEN</a><a class="overviewLink datatype" data-initial="n" data-ident="data.NONSTAFFPLACE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.nonstaffplace.html">data.NONSTAFFPLACE</a><a class="overviewLink datatype" data-initial="n" data-ident="data.NOTATIONTYPE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.notationtype.html">data.NOTATIONTYPE</a><a class="overviewLink datatype" data-initial="n" data-ident="data.NOTEHEADMODIFIER" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.noteheadmodifier.html">data.NOTEHEADMODIFIER</a><a class="overviewLink datatype" data-initial="n" data-ident="data.NOTEHEADMODIFIER.list" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.noteheadmodifier.list.html">data.NOTEHEADMODIFIER.list</a><a class="overviewLink datatype" data-initial="n" data-ident="data.NOTEHEADMODIFIER.pat" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.noteheadmodifier.pat.html">data.NOTEHEADMODIFIER.pat</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_o">
      <div class="label">o</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="o" data-ident="data.OCTAVE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.octave.html">data.OCTAVE</a><a class="overviewLink datatype" data-initial="o" data-ident="data.OCTAVE.DIS" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.octave.dis.html">data.OCTAVE.DIS</a><a class="overviewLink datatype" data-initial="o" data-ident="data.ORIENTATION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.orientation.html">data.ORIENTATION</a><a class="overviewLink datatype" data-initial="o" data-ident="data.ORNAM.cmn" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.ornam.cmn.html">data.ORNAM.cmn</a><a class="overviewLink datatype" data-initial="o" data-ident="data.OTHERSTAFF" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.otherstaff.html">data.OTHERSTAFF</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_p">
      <div class="label">p</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="p" data-ident="data.PAGE.PANELS" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.page.panels.html">data.PAGE.PANELS</a><a class="overviewLink datatype" data-initial="p" data-ident="data.PERCENT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.percent.html">data.PERCENT</a><a class="overviewLink datatype" data-initial="p" data-ident="data.PERCENT.LIMITED" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.percent.limited.html">data.PERCENT.LIMITED</a><a class="overviewLink datatype" data-initial="p" data-ident="data.PERCENT.LIMITED.SIGNED" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.percent.limited.signed.html">data.PERCENT.LIMITED.SIGNED</a><a class="overviewLink datatype" data-initial="p" data-ident="data.PGSCALE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.pgscale.html">data.PGSCALE</a><a class="overviewLink datatype" data-initial="p" data-ident="data.PITCHCLASS" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.pitchclass.html">data.PITCHCLASS</a><a class="overviewLink datatype" data-initial="p" data-ident="data.PITCHNAME" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.pitchname.html">data.PITCHNAME</a><a class="overviewLink datatype" data-initial="p" data-ident="data.PITCHNAME.GES" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.pitchname.ges.html">data.PITCHNAME.GES</a><a class="overviewLink datatype" data-initial="p" data-ident="data.PITCHNUMBER" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.pitchnumber.html">data.PITCHNUMBER</a><a class="overviewLink datatype" data-initial="p" data-ident="data.PLACEMENT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.placement.html">data.PLACEMENT</a><a class="overviewLink datatype" data-initial="p" data-ident="data.PROLATIO" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.prolatio.html">data.PROLATIO</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_r">
      <div class="label">r</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="r" data-ident="data.RATIO" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.ratio.html">data.RATIO</a><a class="overviewLink datatype" data-initial="r" data-ident="data.RELATIONSHIP" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.relationship.html">data.RELATIONSHIP</a><a class="overviewLink datatype" data-initial="r" data-ident="data.ROTATION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.rotation.html">data.ROTATION</a><a class="overviewLink datatype" data-initial="r" data-ident="data.ROTATIONDIRECTION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.rotationdirection.html">data.ROTATIONDIRECTION</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_s">
      <div class="label">s</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="s" data-ident="data.SCALEDEGREE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.scaledegree.html">data.SCALEDEGREE</a><a class="overviewLink datatype" data-initial="s" data-ident="data.SLASH" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.slash.html">data.SLASH</a><a class="overviewLink datatype" data-initial="s" data-ident="data.SLUR" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.slur.html">data.SLUR</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STAFFITEM" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.staffitem.html">data.STAFFITEM</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STAFFITEM.basic" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.staffitem.basic.html">data.STAFFITEM.basic</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STAFFITEM.cmn" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.staffitem.cmn.html">data.STAFFITEM.cmn</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STAFFITEM.mensural" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.staffitem.mensural.html">data.STAFFITEM.mensural</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STAFFITEM.neumes" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.staffitem.neumes.html">data.STAFFITEM.neumes</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STAFFLOC" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.staffloc.html">data.STAFFLOC</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STAFFREL" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.staffrel.html">data.STAFFREL</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STAFFREL.basic" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.staffrel.basic.html">data.STAFFREL.basic</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STAFFREL.extended" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.staffrel.extended.html">data.STAFFREL.extended</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STEMDIRECTION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.stemdirection.html">data.STEMDIRECTION</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STEMDIRECTION.basic" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.stemdirection.basic.html">data.STEMDIRECTION.basic</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STEMDIRECTION.extended" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.stemdirection.extended.html">data.STEMDIRECTION.extended</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STEMMODIFIER" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.stemmodifier.html">data.STEMMODIFIER</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STEMPOSITION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.stemposition.html">data.STEMPOSITION</a><a class="overviewLink datatype" data-initial="s" data-ident="data.STRINGNUMBER" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.stringnumber.html">data.STRINGNUMBER</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_t">
      <div class="label">t</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="t" data-ident="data.TEMPERAMENT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.temperament.html">data.TEMPERAMENT</a><a class="overviewLink datatype" data-initial="t" data-ident="data.TEMPOVALUE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.tempovalue.html">data.TEMPOVALUE</a><a class="overviewLink datatype" data-initial="t" data-ident="data.TEMPUS" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.tempus.html">data.TEMPUS</a><a class="overviewLink datatype" data-initial="t" data-ident="data.TEXTRENDITION" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.textrendition.html">data.TEXTRENDITION</a><a class="overviewLink datatype" data-initial="t" data-ident="data.TEXTRENDITIONLIST" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.textrenditionlist.html">data.TEXTRENDITIONLIST</a><a class="overviewLink datatype" data-initial="t" data-ident="data.TEXTRENDITIONPAR" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.textrenditionpar.html">data.TEXTRENDITIONPAR</a><a class="overviewLink datatype" data-initial="t" data-ident="data.TIE" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.tie.html">data.TIE</a><a class="overviewLink datatype" data-initial="t" data-ident="data.TSTAMPOFFSET" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.tstampoffset.html">data.TSTAMPOFFSET</a><a class="overviewLink datatype" data-initial="t" data-ident="data.TUPLET" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.tuplet.html">data.TUPLET</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_u">
      <div class="label">u</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="u" data-ident="data.UNEUMEFORM" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.uneumeform.html">data.UNEUMEFORM</a><a class="overviewLink datatype" data-initial="u" data-ident="data.UNEUMENAME" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.uneumename.html">data.UNEUMENAME</a><a class="overviewLink datatype" data-initial="u" data-ident="data.URI" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.uri.html">data.URI</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_v">
      <div class="label">v</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="v" data-ident="data.VERTICALALIGNMENT" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.verticalalignment.html">data.VERTICALALIGNMENT</a></div>
   </div>
   <div class="facet letter overview" id="letterFacet_w">
      <div class="label">w</div>
      <div class="statement compact list"><a class="overviewLink datatype" data-initial="w" data-ident="data.WORD" href="{{ site.baseurl }}/{{ page.version }}/data-types/data.word.html">data.WORD</a></div>
   </div>
</div>